# iot-p2p-build

./: .gitignore  CMakeLists.txt  README.md  result.html
.github/file/: CMakeLists.txt.asc  CMakeLists_android.txt.asc  android_release_version.txt  build.gradle  gradle.properties  secring.gpg.asc
.github/file/xp2p_c_demo/xp2p_c_demo/: main.c
.github/file/xp2p_c_demo/xp2p_c_demo.xcodeproj/: project.pbxproj
.github/script/: build_android_combine.sh  build_enet_android.sh  build_enet_android_device.sh  build_enet_ios.sh  build_enet_linux.sh  build_enet_windows.cmd  build_enet_windows.sh  update_values_for_sign.sh  update_version_for_android.sh
.github/workflows/: libxp2p_android.yml  libxp2p_android_combine.yml  libxp2p_android_debug.yml  libxp2p_android_device.yml  libxp2p_android_release.yml  libxp2p_ios.yml  libxp2p_linux.yml  libxp2p_windows.yml
